# csvload

./: .gitignore  README.md  csvload.py  example.sql  pyproject.toml
csvload/: argtypes.py  parser.py  value_function.py
tests/: test_braces.py
