[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "snorkysnark", email = "snorkysnark@gmail.com"},
]
dependencies = [
    "sqlalchemy>=2.0.12",
    "sqlglot>=11.6.3",
    "sqlparse>=0.4.4",
    "pytest>=7.3.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}
